# sunflow-scores

./: .gitignore  README.md  create_comparison_gif.py  main.py  plot_daily_scores.py  plot_domain.py  plot_leadtime_curves.py  plot_leadtime_monthly.py  plot_model_comparison.py  plot_monthly_heatmaps.py  plot_results.py  plot_seasonal_diurnal_cycles.py  pyproject.toml  run_val.sh  run_val2.sh  run_validation.py  run_validation.sh  run_yearly_validation.py  validator.py
notebooks/: gif-maker.ipynb  gitrepos.code-workspace  solar-nowcast-loader-notebook.ipynb  solar-nowcast-validator-notebook.ipynb  validation-hackathon.ipynb  validator-notebook.ipynb  viz-scores.ipynb
src/sunflow_scores/: __init__.py  plot_results.py  validator.py
sunflow_scores.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_validation.py
