[project]
name = "nowcastingvalidation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2026.1.2",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scores>=1.3.0",
    "xarray>=2026.2.0",
]
