[project]
name = "nowcastingvalidation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2026.1.2",
    "h5netcdf>=1.8.1",
    "h5py>=3.15.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scores>=1.3.0",
    "xarray>=2026.2.0",
]
